--- a/my_homeworks/fls/09_css_5/css_5/css/styles_homework.css
+++ b/my_homeworks/fls/09_css_5/css_5/css/styles_homework.css
@@ -1,4 +1,4 @@
-/* ---Стили для шапки---
+/* ---Стили для шапки---*/
 header {
   width: 90%;
   max-width: 1300px;
@@ -29,7 +29,7 @@ a {
   text-decoration: underline;
   font-size: 1rem;
   color: #000000;
-} */
+}
 /*----------------*/
 body {
   background: #e8e8e8;
@@ -46,7 +46,7 @@ body {
   color: #273d46;
 }
 .logo-text {
-  margin: 154px auto 0;
+  margin: 54px auto 0;
   text-align: center;
   opacity: 0.6;
   font-weight: 400;
